fix: fix error handling
